--- a/OPENCV.vcxproj.filters
+++ b/OPENCV.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClCompile Include="helper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Background_Update_With_Per_Color_Pixel_Updation.cpp">
+    <ClCompile Include="Classifier_Redo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
